View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031865 | Open CASCADE | OCCT:Mesh | public | 2020-10-20 15:23 | 2021-10-07 12:38 |
Reporter | kgv | Assigned To | oan | ||
Priority | normal | Severity | minor | ||
Status | new | Resolution | open | ||
Product Version | 7.4.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0031865: Mesh - triangulation fails with large deflection values due to unhandled Standard_OutOfRange, BRepMesh_PairOfIndex::Append() | ||||
Description | Attached face cannot be triangulated due to unhandled Standard_OutOfRange, BRepMesh_PairOfIndex::Append() exception. The issue is reproducible since OCCT 7.4.0 (earlier versions produced 49 or 51 triangles, which is probably exhaustive but not empty) | ||||
Steps To Reproduce | pload MODELING VISUALIZATION restore bug31865.brep b tclean b tclean b; incmesh b 0.2 -algo watson; trinfo b #tclean b; incmesh b 0.2; trinfo b # KO - 0 triangles without any error tclean b; incmesh b 0.2 -algo delabella; trinfo b checktrinfo b -tri 1 # OK - 1 triangle vinit View1 vdefaults -autoTriang 0 vdisplay -dispMode 1 b vfit | ||||
Tags | No tags attached. | ||||
Test case number | |||||
Date Modified | Username | Field | Change |
---|---|---|---|
2020-10-20 15:23 | kgv | New Issue | |
2020-10-20 15:23 | kgv | Assigned To | => oan |
2020-10-20 15:40 | kgv | Product Version | 7.5.0 => 7.4.0 |
2020-10-20 15:40 | kgv | Summary | Mesh - triangulation fails due to unhandled gp_VectorWithNullMagnitude => Mesh - triangulation fails with large deflection values due to unhandled gp_VectorWithNullMagnitude |
2020-10-20 15:40 | kgv | Description Updated | |
2020-10-20 15:40 | kgv | Steps to Reproduce Updated | |
2020-10-20 15:40 | kgv | File Added: bug31865.brep | |
2020-10-20 15:40 | kgv | Steps to Reproduce Updated | |
2020-10-20 15:46 | kgv | Summary | Mesh - triangulation fails with large deflection values due to unhandled gp_VectorWithNullMagnitude => Mesh - triangulation fails with large deflection values due to unhandled Standard_OutOfRange, BRepMesh_PairOfIndex::Append() |
2020-10-20 15:46 | kgv | Description Updated | |
2021-10-07 12:38 | szy | Target Version | 7.6.0 => 7.7.0 |