0031865: Mesh - triangulation fails with large deflection values due to unhandled Standard_OutOfRange, BRepMesh_PairOfIndex::Append()

Define minimum number of points for specific types of curves like it was done for circular edges.